homecluster/slskd/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slskd
  labels:
    app.kubernetes.io/name: slskd
    app.kubernetes.io/instance: slskd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: slskd
    app.kubernetes.io/instance: slskd
  ports:
    - name: http
      port: 5030
      targetPort: http
      protocol: TCP
