homecluster/slskd/manifests/http-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: slskd-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slskd-http-redirect
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-slskd-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: slskd.local.tylermarques.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: slskd
                port:
                  number: 5030
